# simple_render

./: README.md
chap1/: CMakeLists.txt
chap2/: main.cpp
chap3/: CMakeLists.txt  main.cpp  model.cpp  model.h
chap4.1/: main.cpp
chap4.2/: CMakeLists.txt  Matrix.hpp  geometry.cpp  main.cpp
chap5/: CMakeLists.txt  Matrix.hpp  geometry.h  main.cpp  model.h  tgaimage.cpp  tgaimage.h
chap6/: main.cpp
